<package>
  <name>saw_haply_sdk_examples</name>
  <version>2.1.0</version>
  <description>
  sawHaplySDK Examples
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawHaplySDK</url>

  <build_depend>cisst</build_depend>
  <build_depend>saw_haply_sdk</build_depend>

  <run_depend>cisst</run_depend>
  <run_depend>saw_haply_sdk</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
