<?xml version="1.0"?>
<package>
  <name>saw_haply_config</name>
  <version>2.1.0</version>
  <description>sawHaplySDK config files</description>

  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>

  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawHaplySDK</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
